# INF2705

./: .gitignore  CMakeLists.txt  README.md  TODO.md  rename_headers.sh
doc/: .gitignore  tp3.tex
src/: CMakeLists.txt  camera.cpp  camera.hpp  imgui.ini  main.cpp  makefile  model.cpp  model.h  model.hpp  obj_loader.h  obj_loader.hpp  resources.cpp  resources.h  resources.hpp  scenes.cpp  scenes.h  scenes.hpp  scenes.tp3.cpp  scenes.tp4.cpp  shader_program.cpp  shader_program.h  shader_program.hpp  shapes.cpp  shapes.h  shapes.hpp  stb_image.h  stb_image.hpp  textures.cpp  textures.hpp  uniform_buffer.cpp  uniform_buffer.hpp  utils.cpp  utils.hpp  vertices_data.h  vertices_data.hpp  window.cpp  window.h  window.hpp
src/imgui/: imconfig.h  imconfig.hpp  imgui.cpp  imgui.h  imgui.hpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.hpp  imgui_impl_opengl3_loader.h  imgui_impl_opengl3_loader.hpp  imgui_impl_sdl2.cpp  imgui_internal.h  imgui_internal.hpp  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.hpp  imstb_truetype.h  imstb_truetype.hpp
src/shaders/: basic.fs.glsl  color.fs.glsl  flat.gs.glsl  flat.vs.glsl  gouraud.fs.glsl  gouraud.vs.glsl  grass.fs.glsl  grass.vs.glsl  model.fs.glsl  model.vs.glsl  particle.fs.glsl  particle.gs.glsl  particle.vs.glsl  phong.fs.glsl  phong.vs.glsl  river.fs.glsl  river.vs.glsl  simple.fs.glsl  simple.vs.glsl  skybox.fs.glsl  skybox.vs.glsl  tessellation.fs.glsl  tessellation.gs.glsl  tessellation.tcs.glsl  tessellation.tes.glsl  tessellation.vs.glsl  transform.vs.glsl  transformFeedback.vs.glsl  water.fs.glsl  water.vs.glsl  water.vs.tp3.glsl
src/shaders/archive/: basic.vs.glsl  color.vs.glsl
